# embedded2020

./: LICENSE-MIT  README.md
.cargo/: config
.github/workflows/: ci.yml
bootloader/: Cargo.toml  README.md  asm.s  assemble.sh  build.rs  link.x  openocd.gdb
bootloader/.cargo/: config
bootloader/src/: main.rs
firmware/: Cargo.toml  README.md
firmware/.cargo/: config
firmware/apps/: Cargo.toml  README.md
firmware/asm/: Cargo.toml  asm.s  assemble.sh  build.rs
firmware/asm/src/: lib.rs
firmware/async-core/: Cargo.toml
firmware/async-core/src/: lib.rs  task.rs
firmware/async-core/src/unsync/: mutex.rs  spsc.rs
firmware/bootloader/: Cargo.toml  README.md  build.rs  link.x
firmware/bootloader/src/: main.rs
firmware/drivers/mrf24j40/: Cargo.toml
firmware/drivers/mrf24j40/src/: lib.rs  long.rs  reg.rs  short.rs
firmware/executor/: Cargo.toml
firmware/executor/src/: lib.rs
firmware/hal/: Cargo.toml  README.md  build.rs  interrupts.x  link-flash.x  link-ram.x  link.x
firmware/hal/src/: atomic.rs  clock.rs  errata.rs  led.rs  lib.rs  mem.rs  p0.rs  radio.rs  reset.rs  spi.rs  time.rs  timer.rs  usbd.rs  util.rs
firmware/pac/: Cargo.toml
firmware/pac/src/: lib.rs
firmware/panic-abort/: Cargo.toml
firmware/panic-abort/src/: lib.rs
firmware/pool/: Cargo.toml
firmware/pool/src/: lib.rs
firmware/ring/: Cargo.toml
firmware/ring/src/: lib.rs
firmware/semidap/: Cargo.toml  README.md  asm.s  assemble.sh
firmware/semidap/src/: lib.rs
firmware/tasks/: Cargo.toml
firmware/tasks/src/: lib.rs
firmware/tests/: Cargo.toml
firmware/xenon/: Cargo.toml  link.x
firmware/xenon/examples/: led.rs
firmware/xenon/src/: lib.rs
host/: .gitignore  Cargo.toml  README.md
host/acm-cat/: Cargo.toml
host/acm-cat/src/: main.rs
host/binfmt-parser/: Cargo.toml
host/binfmt-parser/src/: lib.rs
host/cmsis-dap/: Cargo.toml
host/cmsis-dap/src/: adiv5.rs  ahb_ap.rs  cortex_m.rs  dap.rs  hid.rs  lib.rs  sealed.rs  util.rs
host/dap-ll/: Cargo.toml  README.md
host/dap-ll/src/: main.rs
host/executor-macros/: Cargo.toml
host/executor-macros/src/: lib.rs
host/hidc/: Cargo.toml
host/hidc/src/: main.rs
host/regen/: Cargo.toml  README.md
host/regen/src/: cm.rs  codegen.rs  fmt.rs  ir.rs  main.rs  opt.rs  translate.rs  verify.rs
host/regen/src/codegen/: util.rs
host/regen/src/translate/: svd.rs
host/semidap/: Cargo.toml  README.md
host/semidap-macros/: Cargo.toml
host/semidap-macros/src/: lib.rs
host/semidap/src/: main.rs
host/semiprobe/: Cargo.toml
host/semiprobe/src/: main.rs
host/tasks-macros/: Cargo.toml
host/tasks-macros/src/: lib.rs
host/usbc/: Cargo.toml
host/usbc/src/: main.rs
shared/: Cargo.toml
shared/async-core/: Cargo.toml
shared/async-core/src/: dll.rs  lib.rs  task.rs  unsync.rs
shared/async-core/src/unsync/: mutex.rs  spsc.rs
shared/binfmt/: Cargo.toml  README.md
shared/binfmt/macros/: Cargo.toml
shared/binfmt/macros/src/: lib.rs
shared/binfmt/src/: derive.rs  impls.rs  lib.rs  util.rs
shared/cm/: Cargo.toml
shared/cm/src/: lib.rs
shared/consts/: Cargo.toml
shared/consts/src/: lib.rs
shared/regen-ufmt/: Cargo.toml
shared/regen-ufmt/src/: lib.rs
shared/usb2/: Cargo.toml
shared/usb2/src/: cdc.rs  device.rs  ep.rs  iface.rs  lib.rs
shared/usb2/src/cdc/: call.rs  header.rs
shared/usbd/: Cargo.toml
shared/usbd/src/: config.rs  device.rs  ep.rs  iface.rs  lib.rs
shared/usbd/src/cdc/: acm.rs  union.rs
