[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "bootloader"
publish = false
version = "0.0.0"

[profile.dev]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false

[dependencies]
cm = { path = "../shared/cm", features = ["SCB"] }
pac = { path = "../firmware/pac", features = ["P0"] }
panic-never = "0.1.0"
