[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "apps"
publish = false
version = "0.0.0"

[[bin]]
name = "bridge"
required-features = ["radio"]

[[bin]]
name = "radio"
required-features = ["radio"]

[[bin]]
name = "usb"
required-features = ["usb"]

[dependencies]
binfmt = { path = "../../shared/binfmt" }
executor = { path = "../executor" }
hal = { path = "../hal" }
panic-abort = { path = "../panic-abort" }
panic-never = "0.1.0"
semidap = { path = "../semidap" }

[features]
radio = ["hal/radio"]
usb = ["hal/usb"]
