[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "apps"
publish = false
version = "0.0.0"

[[bin]]
name = "acm"
required-features = ["usb"]

[[bin]]
name = "radio"
required-features = ["radio"]

[[bin]]
name = "loopback"
required-features = ["hid", "radio"]

[dependencies]
asm = { path = "../asm" }
async-core = { path = "../async-core" }
binfmt = { path = "../../shared/binfmt" }
executor = { path = "../executor" }
hal = { path = "../hal" }
heapless = "0.5.5"
panic-abort = { path = "../panic-abort" }
panic-never = "0.1.0"
semidap = { path = "../semidap" }

[features]
default = ["hid", "radio"]
radio = ["hal/radio"]
usb = ["hal/usb"]
hid = ["hal/hid", "usb"]
