[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "executor"
publish = false
version = "0.0.0"

[dependencies]
asm = { path = "../asm" }
executor-macros = { path = "../../host/executor-macros" }
proc-macro-hack = "0.5.12"
proc-macro-nested = "0.1.4"
