[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "hal"
publish = false
version = "0.0.0"

[dependencies]
binfmt = { path = "../../shared/binfmt" }
semidap = { path = "../semidap" }
usbd = { path = "../../shared/usbd" }

[dependencies.cm]
features = ["DCB", "DWT", "NVIC"]
path = "../../shared/cm"

[dependencies.pac]
features = ["binfmt", "CLOCK", "FICR", "P0", "POWER", "RTC0", "USBD"]
path = "../pac"
