[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "hal"
publish = false
version = "0.0.0"

[build-dependencies]
consts = { path = "../../shared/consts" }
quote = "1"
usb2 = { git = "https://github.com/japaric/usb2" }

[dependencies]
asm = { path = "../asm" }
binfmt = { path = "../../shared/binfmt" }
consts = { path = "../../shared/consts" }
pool = { path = "../pool" }
ring = { path = "../ring" }
semidap = { path = "../semidap" }
tasks = { path = "../tasks" }
usb2 = { git = "https://github.com/japaric/usb2" }

[dependencies.cm]
features = ["DCB", "DWT", "NVIC"]
path = "../../shared/cm"

[dependencies.pac]
features = ["binfmt", "CLOCK", "FICR", "P0", "RTC0", "SPIM0"]
path = "../pac"

[features]
flash = []
hid = ["usb"]
radio = ["pac/RADIO"]
usb = ["pac/POWER", "pac/USBD"]