[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tests"
publish = false
version = "0.0.0"

[dependencies]
binfmt = { path = "../../shared/binfmt" }
cm = { path = "../../shared/cm" }
hal = { path = "../hal" }
pac = { path = "../pac" }
panic-abort = { path = "../panic-abort" }
semidap = { path = "../semidap" }
