[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tests"
publish = false
version = "0.0.0"

[dependencies]
asm = { path = "../asm" }
async-core = { path = "../../shared/async-core" }
binfmt = { path = "../../shared/binfmt" }
cm = { path = "../../shared/cm", features = ["binfmt", "SCB"] }
executor = { path = "../executor" }
hal = { path = "../hal" }
pac = { path = "../pac" }
panic-abort = { path = "../panic-abort" }
panic-never = "0.1.0"
semidap = { path = "../semidap" }
