[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "dap-ll"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.26"
cmsis-dap = { path = "../cmsis-dap" }
env_logger = "0.7.1"
log = "0.4.8"
structopt = "0.3.8"
xmas-elf = "0.7.0"
