[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "semidap"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.26"
arrayref = "0.3.6"
binfmt-parser = { path = "../binfmt-parser" }
cm = { path = "../../shared/cm" }
cmsis-dap = { path = "../cmsis-dap" }
colored = "1.9.2"
ctrlc = "3.1.3"
env_logger = "0.7.1"
gimli = "0.20.0"
log = "0.4.8"
rustc-demangle = "0.1.16"
rustyline = "6.0.0"
structopt = "0.3.8"
xmas-elf = "0.7.0"
