[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "semiprobe"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.31"
arrayref = "0.3.6"
binfmt-parser = { path = "../binfmt-parser" }
cm = { path = "../../shared/cm" }
cmsis-dap = { path = "../cmsis-dap" }
ctrlc = "3.1.4"
env_logger = "0.7.1"
gimli = "0.21.0"
log = "0.4.8"
probe-rs = "0.7.1"
rustc-demangle = "0.1.16"
structopt = "0.3.14"
xmas-elf = "0.7.0"
