[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "binfmt-macros"
publish = false
version = "0.0.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.11"
proc-macro2 = "1.0.9"
quote = "1.0.2"
rand = "0.7.3"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1.0.16"
